--- a/src/public/css/admin.css
+++ b/src/public/css/admin.css
@@ -17,6 +17,11 @@
 }
 */
 
+.admin-page__heading {
+    width: 100%;
+    text-align: center;
+    margin-top: 40px;
+}
 
 .search-form__item {
     height: 40px;
@@ -24,7 +29,6 @@
     justify-content: center;    /* 横方向の中央揃え */
     /* margin-bottom: 150px; */
 }
-
 .search-form-kw__item-input {
     width: 280px;
     text-align: center;
@@ -63,35 +67,56 @@
     color: #ffffff;
 }
 
-
+/* ページネーション用ページ遷移のスタイル */
 .search-form__pagenation {
-    position: absolute;    /* 位置指定のため必須 */
-    left: 75%;    /* 中央を画面の60%に置く基準位置 */
-    transform: translateX(-50%);    /* 自分の幅の半分だけ左に戻す */
+    position: absolute;
+    left: 75%;
+    transform: translateX(-50%);
 }
+svg.w-5.h-5 {
+    /*paginateメソッドの矢印の大きさ調整のために追加*/
+    width: 30px;
+    height: 30px;
+}
+
+
 
 .contact-table {
     margin-top: 120px;
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-/* ページネーション用ページ遷移のスタイル */
-svg.w-5.h-5 {
-    /*paginateメソッドの矢印の大きさ調整のために追加*/
-    width: 30px;
-    height: 30px;
+.contact-table__inner {
+    width: 60%;                 /* ←幅を指定（%でも可） */
+    margin: 0 auto;             /* 左右オートで中央寄せ */
+    border-collapse: collapse;
 }
+.contact-table__inner {
+    border-collapse: collapse;      /* 枠線が重ならないようにする */
+    border: 1px solid black;      /* 表全体の枠線 */
+}
+
+.contact-table-header th {
+    height: 50px;                     /* 行の高さ */
+    background-color: #8b7968;      /* 背景色 */
+    color: white;                   /* 文字色 */
+    padding: 10px;                    /* 内側の余白を増やすと高さも広がる */
+}
+
+.contact-table-data td {
+    height: 50px;
+    padding: 10px;
+}
+
+.contact-table__inner tr {
+    border: 1px solid black;        /* 各セルの枠線 */
+    padding: 8px;                       /* 文字と枠の余白 */
+    text-align: left;                   /* 文字を左寄せ */
+}
+
+
+
+
 
 /* モーダルのスタイル */
 .modal {
@@ -107,7 +132,6 @@ svg.w-5.h-5 {
     background-color: rgba(0, 0, 0, 0.5);
     /* 半透明背景 */
 }
-
 .modal-content {
     background-color: #fff;
     margin: 15% auto;
@@ -116,7 +140,6 @@ svg.w-5.h-5 {
     width: 30%;
     border-radius: 8px;
 }
-
 .close {
     color: #aaa;
     float: right;
@@ -124,7 +147,6 @@ svg.w-5.h-5 {
     font-weight: bold;
     cursor: pointer;
 }
-
 .close:hover {
     color: black;
 }
